hphp/hack/test/typecheck/re_prefixed_string/non_re_prefixed_string.php.exp
File "non_re_prefixed_string.php", line 4, characters 8-20:
Only `re`-prefixed strings allowed. (Parsing[1002])
